--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bootstrap": "^4.0.0-beta.2",
         "express": "^4.16.2",
         "jquery": "^3.2.1",
+        "mysql": "^2.18.1",
         "nodemailer": "^6.4.11"
     },
     "devDependencies": {
