--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "license": "ISC",
     "dependencies": {
         "bootstrap": "^4.0.0-beta.2",
+        "email-templates": "^8.0.7",
         "express": "^4.16.2",
         "jquery": "^3.2.1",
         "mysql": "^2.18.1",
-        "nodemailer": "^6.4.11"
+        "mysql2": "^2.2.5",
+        "nodemailer": "^6.6.2",
+        "nodemailer-sendmail-transport": "^1.0.2",
+        "nodemailer-smtp-transport": "^2.7.4",
+        "pug": "^3.0.2",
+        "q": "^1.5.1",
+        "sequelize": "^6.6.4"
     },
     "devDependencies": {
         "browser-sync": "^2.27.3",
-        "gulp": "^3.9.1"
+        "gulp": "^3.9.1",
+        "nodemon": "^2.0.9"
     }
 }
